<resources>
    <string name="empty" />
    <!--app下载更新-->
    <string name="down_cancel" translatable="false">取消更新</string>
    <string name="down_browser" translatable="false">浏览器下载</string>
    <string name="update_text" translatable="false">立即更新</string>
    <string name="update_manual" translatable="false">手动更新</string>
    <string name="update_later" translatable="false">稍后更新</string>
    <string name="update_retry" translatable="false">重 试</string>
    <string name="update_exit" translatable="false">取 消</string>
    <string name="update_permission" translatable="false">应用更新：请授权访问存储空间权限</string>

    <string name="test_update_title" translatable="false">发现新版本v2.1.0</string>
    <string name="test_update_content" translatable="false">
        1、新增离线消息推送
        \n2、新增消息提醒新增消息提醒新增消息提醒新增消息提醒新增消息提醒
        \n3、新增历史消息清除
        \n4、部分样式优化部分样式优化部分样式优化部分样式优化部分样式优化部分样式优化
        \n5、新增离线消息推送
        \n6、新增消息提醒新增消息提醒新增消息提醒新增消息提醒新增消息提醒提醒
        \n7、新增历史消息清除
        \n8、部分样式优化部分样式优化部分样式优化部分样式优化
    </string>

</resources>
