<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/test_update_title"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.2"
        android:maxHeight="150dp"
        android:scrollbarSize="1dp"
        android:scrollbars="vertical"
        android:text=""
        android:textSize="16sp"
        tools:text="@string/test_update_content" />

    <com.watayouxiang.appupdate.view.NumberProgressBar
        android:id="@+id/nbpProgress"
        style="@style/NumberProgressBar_Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:progress_current="0"
        app:progress_max="100"
        app:progress_reached_bar_height="4dp"
        app:progress_reached_color="#4F97EF"
        app:progress_text_color="#3498DB"
        app:progress_text_offset="1dp"
        app:progress_text_size="10sp"
        app:progress_text_visibility="visible"
        app:progress_unreached_bar_height="4dp"
        app:progress_unreached_color="#CCCCCC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdateLater"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_later"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnUpdateNow"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_text"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="14sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnManualUpdate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_manual"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="14sp"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>